<resources>
    <string name="app_name">数据测试</string>
    <string name="用户名">请输入用户名</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="用户标签">用户:</string>
    <string name="图标应用描述">应用图标</string>
    <string name="密码标签">密码</string>
    <string name="密码框提示">输入密码</string>
    <string name="复选框标签">记住密码</string>
    <string name="登录按钮">登录</string>
    <string name="inbox">收件箱</string>
    <string name="categories">分类</string>
    <string name="starred">喜欢</string>
    <string name="sent_mail">邮箱</string>
    <string name="drafts">草稿</string>
    <string name="trash">垃圾</string>
    <string name="spam">垃圾邮件</string>
    <string name="settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
